restructured routes and minor changes